[project]
name = "spiffworkflow-arena"
version = "0.0.0"
description = "Spiffworkflow Arena"
authors = ["Jason Lantz <sartography@users.noreply.github.com>"]
license = "LGPL"
readme = "README.md"
homepage = "https://github.com/sartography/spiffworkflow-arena"
package-mode = false
repository = "https://github.com/sartography/spiffworkflow-arena"
classifiers = [
    "Development Status :: 4 - Beta",
]

requires-python = ">=3.11,<3.13"

[dependency-groups]
dev = [
    "pre-commit >=4.0.1,<4.1",
    "pre-commit-hooks >=5.0.0,<6",
    "ruff >=0.8.2,<0.9",
    "tomli >=2.0.1,<2.1",
]
