[project]
name = "spiffworkflow-arena"
version = "0.0.0"
description = "Spiffworkflow Arena"
authors = ["Jason Lantz <sartography@users.noreply.github.com>"]
license = "LGPL"
readme = "README.md"
homepage = "https://github.com/sartography/spiffworkflow-arena"
package-mode = false
repository = "https://github.com/sartography/spiffworkflow-arena"
classifiers = [
    "Development Status :: 4 - Beta",
]

requires-python = ">=3.11,<3.13"

[dependency-groups]
dev = [
    "Jinja2",
    "pre-commit",
    "pre-commit-hooks",
    "pytest",
    "ruff",
    "spiff_arena_common",
    "SpiffWorkflow==3.1.2",
]

[tool.uv.workspace]
members = [
    "spiff-arena-common",
]

[tool.uv.sources]
spiff_arena_common = { workspace = true }
