[tool.poetry]
name = "connector-proxy-demo"
version = "0.1.0"
description = "An example showing how to use the Spiffworkflow-proxy's Flask Blueprint to make services available to Service Tasks."
authors = ["Dan <dan@sartography.com>"]
license = "LGPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"

spiffworkflow-proxy = {git = "https://github.com/sartography/spiffworkflow-proxy"}

connector-aws = {git = "https://github.com/sartography/connector-aws.git"}
connector-http = {git = "https://github.com/sartography/connector-http.git"}
connector-slack = {git = "https://github.com/sartography/connector-slack.git"}
connector-smtp = {git = "https://github.com/sartography/connector-smtp.git"}
connector-example = {develop = true, path = "./connector-example" }

xmltodict = "^0.15.0"

gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[dependency-groups]
dev = [
  "pytest (>=9.0.3,<10.0.0)"
]
