[tool.poetry]
name = "spiff-arena-docs"
version = "0.1.0"
description = "Documentation for SpiffWorkflow"
authors = ["danfunk <daniel.h.funk@gmail.com>"]
license = "lgpl"
readme = "README.md"
packages = [{include = "spiff_arena_docs"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
Sphinx = "^6.2.1"   # myst-parser did not support 7.0 at the time this was written.
myst-parser = "^1.0.0"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
