[project]
name = "spiff-arena-common"
version = "0.1.20"
description = "Shared Python utilities for Spiff Arena frontend and backend components"
readme = "README.md"
requires-python = ">=3.10, <3.13"

# Dependencies are intentionally commented out.
# Specifying them causes issues when this package is loaded via micropip in Pyodide.
#dependencies = [
#	"Jinja2",
#	"jsonschema",
#	"SpiffWorkflow"
#]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
