[project]
name = "spiff-arena-common"
version = "0.1.41"
description = "Shared Python utilities for Spiff Arena frontend and backend components"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "Jinja2==3.1.6",
    "jsonschema==4.26.0",
    "SpiffWorkflow==3.1.3a1781208805",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
