[project]
name = "civitos-browser-tests"
version = "0.1.0"
description = "Playwright browser tests"
requires-python = ">=3.8"
dependencies = [
    "pytest-playwright",
]

[tool.pytest.ini_options]
# Specify the test paths relative to this pyproject.toml
testpaths = [
    "tests/browser",
]
# You can add other pytest options here, for example:
# addopts = "--headed --browser=chromium"
